# Kwybars

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: ci.yml  release.yml
assets/examples/: config.toml  floating.toml  frame.toml  line.toml  mirror.toml  particle.toml  polygon.toml  radial.toml  wave.toml
assets/themes/: ayu-dark.toml  catppuccin-mocha.toml  dracula.toml  everforest.toml  gruvbox.toml  nord.toml  rose-pine.toml  tokyo-night.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  logging.rs  notify.rs  spectrum.rs  theme.rs
crates/common/src/config/: mod.rs  model.rs  parse.rs  tests.rs
crates/control/src/: args.rs  diagnostics.rs  error.rs  main.rs  switch.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: activity.rs  lib.rs  main.rs  process.rs
crates/engine/: Cargo.toml
crates/engine/src/: ipc.rs  lib.rs  live.rs  pipeline.rs
crates/overlay/: Cargo.toml
crates/overlay-wayland/: Cargo.toml
crates/overlay-wayland/src/: app.rs  draw.rs  main.rs
crates/overlay-wayland/src/app/: buffer.rs  error.rs  mod.rs  monitor.rs  runtime.rs  source.rs  state.rs  surface.rs
crates/overlay-wayland/src/draw/: geometry.rs  mod.rs  paint.rs  raster.rs  tests.rs
crates/overlay/src/: app.rs  main.rs  theme.rs
crates/overlay/src/ui/: color.rs  draw.rs  fade.rs  frame.rs  image.rs  layer.rs  mod.rs  output.rs  render.rs  style.rs  window.rs
crates/overlay/src/ui/draw/: centered.rs  linear.rs  mod.rs  particles.rs  path.rs  tests.rs  types.rs  wave.rs
