[package]
name = "kwybars-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true
