[package]
name = "kwybars-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gtk = { package = "gtk4", version = "0.10" }
gtk4-layer-shell = "0.6"
kwybars-common = { path = "../common" }
kwybars-engine = { path = "../engine" }

[lints]
workspace = true
