[package]
name = "kwybars-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gdk-pixbuf = "0.21"
gtk = { package = "gtk4", version = "0.10" }
gtk4-layer-shell = "0.6"
kwybars-common = { path = "../common" }
kwybars-engine = { path = "../engine" }
tracing = "0.1"

[lints]
workspace = true
